--- a/back/backIA/price-prediction model/nb/Data.ipynb
+++ b/back/backIA/price-prediction model/nb/Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,28 +68,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# historical price \n",
     "def getstockpricehistory(stock):\n",
-    "    request = requests.get(url=f\"https://financialmodelingprep.com/api/v3/historical-price-full/{stock}?serietype=line&apikey={fmp_api_key}\")\n",
+    "    request = requests.get(url=f\"https://financialmodelingprep.com/api/v3/historical-chart/1day/{stock}?apikey={fmp_api_key}\")\n",
     "    response = request.json()\n",
-    "    df = pd.json_normalize(response, 'historical')\n",
-    "    df = df.rename(columns={'date': 'Date', 'close': 'Close'})\n",
+    "    df = pd.json_normalize(response)\n",
     "\n",
     "    # Drop duplicates\n",
-    "    df = df.drop_duplicates(subset='Date')\n",
+    "    df = df.drop_duplicates(subset='date')\n",
     "\n",
     "    # Convert the 'Date' column to datetime\n",
-    "    df['Date'] = pd.to_datetime(df['Date'])\n",
+    "    df['date'] = pd.to_datetime(df['date'])\n",
     "    \n",
     "    # Fill in missing dates with the value of the previous date\n",
-    "    df = df.set_index('Date').asfreq('D', method='bfill').reset_index()\n",
+    "    df = df.set_index('date').asfreq('D', method='bfill').reset_index()\n",
     "    \n",
     "    # Change the date format to DD/MM/YYYY\n",
-    "    df['Date'] = df['Date'].dt.strftime('%d/%m/%Y')\n",
+    "    df['date'] = df['date'].dt.strftime('%d/%m/%Y')\n",
     "    \n",
     "    return df\n",
     "\n",
@@ -121,27 +120,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>open</th>\n",
+       "      <th>low</th>\n",
+       "      <th>high</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>27/12/1983</td>\n",
+       "      <td>0.10993</td>\n",
+       "      <td>0.10993</td>\n",
+       "      <td>0.11161</td>\n",
+       "      <td>0.11049</td>\n",
+       "      <td>96432000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>28/12/1983</td>\n",
+       "      <td>0.11049</td>\n",
+       "      <td>0.10938</td>\n",
+       "      <td>0.11272</td>\n",
+       "      <td>0.11161</td>\n",
+       "      <td>128553600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>29/12/1983</td>\n",
+       "      <td>0.11161</td>\n",
+       "      <td>0.10882</td>\n",
+       "      <td>0.11272</td>\n",
+       "      <td>0.10882</td>\n",
+       "      <td>102748800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>30/12/1983</td>\n",
+       "      <td>0.10882</td>\n",
+       "      <td>0.10826</td>\n",
+       "      <td>0.11161</td>\n",
+       "      <td>0.10882</td>\n",
+       "      <td>91862400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>31/12/1983</td>\n",
+       "      <td>0.10882</td>\n",
+       "      <td>0.10826</td>\n",
+       "      <td>0.11161</td>\n",
+       "      <td>0.10882</td>\n",
+       "      <td>91862400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14594</th>\n",
+       "      <td>11/12/2023</td>\n",
+       "      <td>193.11000</td>\n",
+       "      <td>191.42000</td>\n",
+       "      <td>193.49000</td>\n",
+       "      <td>193.18000</td>\n",
+       "      <td>60943700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14595</th>\n",
+       "      <td>12/12/2023</td>\n",
+       "      <td>193.08000</td>\n",
+       "      <td>191.72100</td>\n",
+       "      <td>194.72000</td>\n",
+       "      <td>194.71000</td>\n",
+       "      <td>52696900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14596</th>\n",
+       "      <td>13/12/2023</td>\n",
+       "      <td>195.09000</td>\n",
+       "      <td>194.85000</td>\n",
+       "      <td>198.00000</td>\n",
+       "      <td>197.96000</td>\n",
+       "      <td>70404200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14597</th>\n",
+       "      <td>14/12/2023</td>\n",
+       "      <td>198.02000</td>\n",
+       "      <td>196.16000</td>\n",
+       "      <td>199.62000</td>\n",
+       "      <td>198.11000</td>\n",
+       "      <td>66831600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14598</th>\n",
+       "      <td>15/12/2023</td>\n",
+       "      <td>197.53000</td>\n",
+       "      <td>197.00000</td>\n",
+       "      <td>198.39990</td>\n",
+       "      <td>197.57000</td>\n",
+       "      <td>114815314</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>14599 rows × 6 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "'AMD price history updated'"
+       "             date       open        low       high      close     volume\n",
+       "0      27/12/1983    0.10993    0.10993    0.11161    0.11049   96432000\n",
+       "1      28/12/1983    0.11049    0.10938    0.11272    0.11161  128553600\n",
+       "2      29/12/1983    0.11161    0.10882    0.11272    0.10882  102748800\n",
+       "3      30/12/1983    0.10882    0.10826    0.11161    0.10882   91862400\n",
+       "4      31/12/1983    0.10882    0.10826    0.11161    0.10882   91862400\n",
+       "...           ...        ...        ...        ...        ...        ...\n",
+       "14594  11/12/2023  193.11000  191.42000  193.49000  193.18000   60943700\n",
+       "14595  12/12/2023  193.08000  191.72100  194.72000  194.71000   52696900\n",
+       "14596  13/12/2023  195.09000  194.85000  198.00000  197.96000   70404200\n",
+       "14597  14/12/2023  198.02000  196.16000  199.62000  198.11000   66831600\n",
+       "14598  15/12/2023  197.53000  197.00000  198.39990  197.57000  114815314\n",
+       "\n",
+       "[14599 rows x 6 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "saveStockPriceHistory('AMD')"
+    "getstockpricehistory(\"AAPL\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +401,7 @@
        "'stocks prices history updated'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
